[gd_scene load_steps=7 format=3 uid="uid://cqsvs3gg2fos7"]

[ext_resource type="Script" uid="uid://e7rkus4af5ch" path="res://Scripts/results_screen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c6fqy8xj3hpqv" path="res://Scenes/Components/rank_display.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bdqj6a3vp52kk" path="res://Scenes/Components/stat_card.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://ckxwj7jb5p5xw" path="res://Scenes/Components/judgment_breakdown.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://ct7ry4x8bhmgh" path="res://Scenes/Components/progression_display.tscn" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.05, 0.05, 0.08, 0.95)

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="ScrollContainer/MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Song Title (Difficulty)"
horizontal_alignment = 1

[node name="RankDisplay" parent="ScrollContainer/MainVBox" instance=ExtResource("2")]
layout_mode = 2

[node name="StatsHBox" type="HBoxContainer" parent="ScrollContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="ScoreCard" parent="ScrollContainer/MainVBox/StatsHBox" instance=ExtResource("3")]
layout_mode = 2

[node name="AccuracyCard" parent="ScrollContainer/MainVBox/StatsHBox" instance=ExtResource("3")]
layout_mode = 2

[node name="ComboCard" parent="ScrollContainer/MainVBox/StatsHBox" instance=ExtResource("3")]
layout_mode = 2

[node name="JudgmentBreakdown" parent="ScrollContainer/MainVBox" instance=ExtResource("4")]
layout_mode = 2

[node name="ProgressionDisplay" parent="ScrollContainer/MainVBox" instance=ExtResource("5")]
layout_mode = 2

[node name="ButtonsContainer" type="CenterContainer" parent="ScrollContainer/MainVBox"]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="ScrollContainer/MainVBox/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RetryButton" type="Button" parent="ScrollContainer/MainVBox/ButtonsContainer/ButtonsHBox"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="MenuButton" type="Button" parent="ScrollContainer/MainVBox/ButtonsContainer/ButtonsHBox"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Song Select"
